Correct vertical alignment of outline-style tags in subheader
Summary: Closes T16552

Test Plan: Look at the subheader of an object, e.g. a task with a subtype defined.

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T16552

Differential Revision: https://we.phorge.it/D26840

--- a/webroot/rsrc/css/phui/phui-header-view.css
+++ b/webroot/rsrc/css/phui/phui-header-view.css
@@ -220,11 +220,11 @@ details > summary.phui-header-shell::-webkit-details-marker {
   border-color: transparent;
 }
 
-
 .phui-header-subheader .phui-tag-view,
 .phui-header-subheader .phui-tag-type-shade .phui-tag-core {
   border: none;
   font-weight: normal;
+  margin-bottom: 8px;
 }
 
 .policy-header-callout.policy-adjusted-special {
